# Beholder_1.0

./: .gitattributes  .gitignore  Gate_instruments_USDT  create_session.bat  create_session.py  database.db  debug_db.py  debug_signals.py  debug_signals_full.py  debug_tono.py  debug_tono_details.py  debug_tono_status.py  dev_run.py  dev_scraper_test.py  inspect_db.py  install.bat  install_service.bat  main.py  pyproject.toml  read_me.txt  remove_service.bat  reset_telegram_message  run.bat  test_enum.py  test_scrape_tono.py  test_security.py
TEST/: 2_Gate_instruments_USDT  Binance_instruments_BTC
database/: core.py  models.py
services/: alert_engine.py  api_risk_checker.py  article_parser.py  blog_scraper.py  cmc.py  config.py  file_watcher.py  market_data.py  notifications.py  scheduler.py  scraper.py  security.py  system.py  telegram.py  telegram_monitor.py  web_scraper.py
tests/: conftest.py  test_alert_engine.py  test_article_parser.py  test_database.py  test_external.py  test_file_watcher.py  test_market_data.py  test_models.py  test_scraper.py  test_scraper_service.py  test_ui_logging.py
tools/: get_market_volume.py
ui/: layout.py
ui/pages/: dashboard.py  errors.py  logs.py  manual_controls.py  pivot.py  settings.py  signals.py  warnings.py
utils/: logging_setup.py  symbol_normalizer.py
