[project]
name = "beholder"
version = "0.1.0"
description = "Crypto market monitoring and alerting system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nicegui==3.7.1",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
    "apscheduler>=3.10.0",
    "ccxt>=4.0.0",
    "loguru>=0.7.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.14.3",
    "selenium>=4.39.0",
    "webdriver-manager>=4.0.2",
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    "notebook>=7.5.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
